@@ -8,7 +8,7 @@ export(glmboost, glmboost_fit,
        boost_control, mstop, Family, 
        GaussReg, GaussClass, Laplace, Binomial, Poisson, 
        Huber, AdaExp, CoxPH, boost_dpp, FP, IPCweights, cvrisk, bbs, 
-       bss, bns, bols, bspatial, brandom, btree)
+       bss, bns, bols, bspatial, brandom, btree, survFit)
 exportClasses("boost_family")
 exportMethods("show")
 
@@ -22,6 +22,7 @@ S3method(blackboost, formula)
 S3method(blackboost, matrix)
 S3method(print, gamboost)
 S3method(plot, gamboost)
+S3method(plot, survFit)
 S3method(coef, gamboost)
 S3method(hatvalues, gb)
 S3method(hatvalues, glmboost)
@@ -45,6 +46,8 @@ S3method(mstop, gbAIC)
 S3method(mstop, cvrisk)
 S3method(mstop, gb)
 S3method(mstop, blackboost)
+S3method(survFit, gb)
+S3method(survFit, blackboost)
 S3method("[", gb)
 S3method("[", blackboost)
 
