@@ -7,6 +7,8 @@
 
   o  add coef.gamboost (when bols is used as baselearner)
 
+  o  new generic `survFit'
+
 
 		CHANGES in `mboost' VERSION 1.0-1 (2007-12-09)
 
